launchpad-buildd (227) UNRELEASED; urgency=medium

  * Tolerate receiving "builder_constraints": None.
  * Check the appropriate server.key path for the LXD snap.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 24 Jan 2023 13:13:27 +0000

launchpad-buildd (226) focal; urgency=medium

  * Remove unused "distribution" argument from the binarypackage manager.
    This was only used with the old internal sbuild fork, which we dropped
    in launchpad-buildd 127.
  * Remove the old "distroseries_name" argument from the sourcepackagerecipe
    manager, which duplicated the common "series" argument.
  * If the "gpu-nvidia" constraint is specified, then pass through an NVIDIA
    GPU to the LXD container, and pass the "--gpu-nvidia" option to lpcraft.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 23 Jan 2023 17:42:51 +0000

launchpad-buildd (225) focal; urgency=medium

  * Fix add-trusted-keys regression due to Backend.open calling "lxc exec"
    and draining stdin (LP: #1999420).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 13 Dec 2022 12:16:46 +0000

launchpad-buildd (224) focal; urgency=medium

  [ Colin Watson ]
  * Allow configuring builders to use a different ClamAV database URL.
  * Require the LXD snap to be installed, rather than depending on the lxd
    package (which no longer exists in jammy).
  * Calculate major number for device-mapper by searching /proc/devices; the
    "dmsetup create" approach doesn't seem to work properly in jammy.

  [ Andrey Fedoseev ]
  * `open` method is added to the backends providing access to the files
    in target environments via a file-like object.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 12 Dec 2022 12:20:03 +0000

launchpad-buildd (223) focal; urgency=medium

  * Add optional malware scanning at the end of CI build jobs, currently
    implemented using clamav.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 07 Oct 2022 17:31:08 +0100

launchpad-buildd (222) focal; urgency=medium

  * Remove use of six.